[package]
name = "sequencer"
version = "0.1.0"
edition = "2021"
description = "Dependency graph processing libarary"
license-file = "LICENSE"
repository = "https://github.com/mdenchev/sequencer/"
keywords = ["gamedev", "graph", "sequencing" ]

[dependencies]
log = "0.4"
slotmap = { version = "1.0" }
